# confab-framework

./: .gitignore  DESIGN.md  LICENSE  README.md  __main__.py  action.yml  claims.py  cli.py  config.py  dashboard.html  gate.py  pyproject.toml  tracker.py  verify.py
.github/workflows/: ci.yml  confab-gate.yml  publish.yml
confab/: __init__.py  claims.py  cli.py  config.py  fix_expired.py  gate.py  lint.py  middleware.py  quarantine.py  signals.py  supports.py  tracker.py  tree.py  triage.py  verify.py
confab/examples/: __init__.py  claude_code_hooks.md  github_actions.yml  langchain_integration.py  multi_agent_demo.py  standalone_scan.py
confab/integrations/: __init__.py  agent_sdk.py  autogen.py  crewai.py  langchain.py  openai_agents.py
examples/: ci_gate_handoff.py  middleware_example.py
examples/quickstart/: README.md  confab.toml  handoff.md
tests/: test_agent_sdk.py  test_autogen.py  test_behavior_ttl.py  test_claims.py  test_config.py  test_crewai.py  test_fix_expired.py  test_fix_perishable.py  test_gate.py  test_hook.py  test_lint.py  test_middleware.py  test_openai_agents.py  test_report.py  test_scan.py  test_signals.py  test_tracker.py  test_tree.py  test_triage.py  test_verify.py  test_volatility.py
